<resources>
    <string name="app_name">Delta</string>
    <string name="saliohjelmat">Saliohjelmat</string>
    <string name="oma_kehitys">Oma Kehitys</string>
    <string name="omat_treenit">Omat treenit</string>
    <string name="selk_ja_hauis">Selkä ja hauis</string>
    <string name="yl_talja_4x8">Ylätalja 4x8</string>
    <string name="sy_t_paino_kg1">Syötä paino (kg)</string>
    <string name="kulmasoutu_tangolla_3x10">Kulmasoutu tangolla 3x10</string>
    <string name="hauisk_nt_k_sipainoilla_3x10">Hauiskääntö käsipainoilla 3x10</string>
    <string name="sy_t_paino_kg2">Syötä paino (kg)</string>
    <string name="hauisk_nt_ez_tangolla_3x10">Hauiskääntö EZ tangolla 3x10</string>
    <string name="sy_t_paino_kg3">Syötä paino (kg)</string>
    <string name="alatalja_4x8">Alatalja 4x8</string>
    <string name="sy_t_paino_kg4">Syötä paino (kg)</string>
    <string name="hauisk_nt_taljassa_3x10">Hauiskääntö taljassa 3x10</string>
    <string name="sy_t_paino_kg5">Syötä paino (kg)</string>
    <string name="logo">Logo</string>
    <string name="sy_t_paino_kg6">Syötä paino (kg)</string>
    <string name="jalkatreeni">Jalkatreeni</string>
    <string name="jalkapr_ssi_4x10">Jalkaprässi 4x10</string>
    <string name="kyykky_tangolla_4x10">Kyykky tangolla 4x10</string>
    <string name="bulgarialainen_kyykky_3x10">Bulgarialainen kyykky 3x10</string>
    <string name="reiden_ojennus_3x10">Reiden ojennus 3x10</string>
    <string name="pohkeet_4x12">Pohkeet 4x12</string>
    <string name="reiden_loitonnus_3x10">Reiden loitonnus 3x10</string>
    <string name="istumaannousu_3x20">Istumaannousu 3x20</string>
    <string name="rinta_olkap_ojentaja">Rinta/Olkapää/Ojentaja</string>
    <string name="vinopenkki_k_sipainoilla_3x8">Vinopenkki käsipainoilla 3x8</string>
    <string name="penkkipunnerrus_4x8">Penkkipunnerrus_4x8</string>
    <string name="vipunostot_eteen_3x10">Vipunostot eteen 3x10</string>
    <string name="pec_deck_3x10">Pec deck 3x10</string>
    <string name="vipunostot_sivuille_3x10">Vipunostot sivuille 3x10</string>
    <string name="pystypunnerrus_tangolla_3x8">Pystypunnerrus tangolla 3x8</string>
    <string name="ojentaja_punnerrus_talja_4x8">Ojentaja punnerrus talja 4x8</string>
    <string name="ojentaja_punnerrus_ez_3x10">Ojentaja punnerrus EZ 3x10</string>
</resources>